<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_search_rooms"
            android:title="@string/menu_search_rooms" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_search_people"
            android:title="@string/menu_search_people" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_news"
                android:title="@string/menu_news" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_events"
                android:title="@string/menu_events" />
        </menu>
    </item>

</menu>
